# npcompliance

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile  config.py  database.py  main.py
api/routers/: entities.py  filings.py  health.py  investigations.py
ingestion/: Dockerfile  celery_app.py
ingestion/tasks/: irs990.py  ofac.py  state_registry.py
processing/: normalizer.py
scoring/: engine.py
storage/: alembic.ini
storage/migrations/: env.py
storage/migrations/versions/: 0001_initial_schema.py
storage/models/: __init__.py  entity.py  filing.py  grant.py  officer.py  risk_score.py  sanctions_hit.py  state_registry.py
tests/: test_normalizer.py
ui/: .gitkeep
