[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "npcompliance"
version = "0.1.0"
description = "NonProfit Risk & Compliance OSINT Scanner"
requires-python = ">=3.12"
dependencies = [
    # Web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # Database
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    # Task queue
    "celery[redis]>=5.4",
    # HTTP
    "httpx>=0.27",
    "aiohttp>=3.9",
    # Data
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    # Utilities
    "tenacity>=8.3",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = [".", "api", "ingestion", "processing", "scoring", "storage"]
addopts = "-m 'not integration and not slow'"
markers = [
    "integration: tests requiring external services",
    "slow: tests that take > 10 seconds",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
